DO $$
BEGIN
  IF NOT EXISTS (SELECT 1 FROM pg_type WHERE typname = 'approval_status') THEN
    CREATE TYPE approval_status AS ENUM ('pending', 'approved', 'rejected');
  END IF;
END
$$;

CREATE TABLE IF NOT EXISTS users (
  username text PRIMARY KEY
);

CREATE TABLE IF NOT EXISTS edge_devices (
  device_id text PRIMARY KEY,
  device_type text,
  site_name text,
  latitude numeric,
  longitude numeric
);

CREATE TABLE IF NOT EXISTS model_cards (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  name text NOT NULL,
  version text,
  is_private boolean NOT NULL DEFAULT false,
  is_gated boolean NOT NULL DEFAULT false,
  short_description text,
  full_description text,
  keywords text,
  author text,
  citation text,
  input_data text,
  input_type text,
  output_data text,
  foundational_model text,
  category text,
  documentation text,
  created_at timestamptz NOT NULL,
  updated_at timestamptz NOT NULL
);

CREATE TABLE IF NOT EXISTS datasheet_publishers (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  name text NOT NULL,
  publisher_identifier text,
  publisher_identifier_scheme text,
  scheme_uri text,
  lang text
);

CREATE TABLE IF NOT EXISTS datasheets (
  identifier bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  publication_year integer,
  resource_type text,
  resource_type_general text,
  size text,
  format text,
  version text,
  is_private boolean NOT NULL DEFAULT false,
  status approval_status NOT NULL DEFAULT 'pending',
  created_at timestamptz NOT NULL,
  updated_at timestamptz NOT NULL,
  publisher_id bigint REFERENCES datasheet_publishers(id)
);

CREATE INDEX IF NOT EXISTS idx_datasheets_status ON datasheets (status);
CREATE INDEX IF NOT EXISTS idx_datasheets_publisher_id ON datasheets (publisher_id);

CREATE TABLE IF NOT EXISTS datasheet_creators (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  datasheet_id bigint NOT NULL REFERENCES datasheets(identifier) ON DELETE CASCADE,
  creator_name text NOT NULL,
  name_type text,
  lang text,
  given_name text,
  family_name text,
  name_identifier text,
  name_identifier_scheme text,
  name_id_scheme_uri text,
  affiliation text,
  affiliation_identifier text,
  affiliation_identifier_scheme text,
  affiliation_scheme_uri text
);
CREATE INDEX IF NOT EXISTS idx_datasheet_creators_datasheet_id ON datasheet_creators (datasheet_id);

CREATE TABLE IF NOT EXISTS datasheet_titles (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  datasheet_id bigint NOT NULL REFERENCES datasheets(identifier) ON DELETE CASCADE,
  title text NOT NULL,
  title_type text,
  lang text
);
CREATE INDEX IF NOT EXISTS idx_datasheet_titles_datasheet_id ON datasheet_titles (datasheet_id);

CREATE TABLE IF NOT EXISTS datasheet_subjects (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  datasheet_id bigint NOT NULL REFERENCES datasheets(identifier) ON DELETE CASCADE,
  subject text NOT NULL,
  subject_scheme text,
  scheme_uri text,
  value_uri text,
  classification_code text,
  lang text
);
CREATE INDEX IF NOT EXISTS idx_datasheet_subjects_datasheet_id ON datasheet_subjects (datasheet_id);

CREATE TABLE IF NOT EXISTS datasheet_contributors (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  datasheet_id bigint NOT NULL REFERENCES datasheets(identifier) ON DELETE CASCADE,
  contributor_type text NOT NULL,
  contributor_name text NOT NULL,
  name_type text,
  given_name text,
  family_name text,
  name_identifier text,
  name_identifier_scheme text,
  name_id_scheme_uri text,
  affiliation text,
  affiliation_identifier text,
  affiliation_identifier_scheme text,
  affiliation_scheme_uri text
);
CREATE INDEX IF NOT EXISTS idx_datasheet_contributors_datasheet_id ON datasheet_contributors (datasheet_id);

CREATE TABLE IF NOT EXISTS datasheet_dates (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  datasheet_id bigint NOT NULL REFERENCES datasheets(identifier) ON DELETE CASCADE,
  date text NOT NULL,
  date_type text NOT NULL,
  date_information text
);
CREATE INDEX IF NOT EXISTS idx_datasheet_dates_datasheet_id ON datasheet_dates (datasheet_id);

CREATE TABLE IF NOT EXISTS datasheet_alternate_identifiers (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  datasheet_id bigint NOT NULL REFERENCES datasheets(identifier) ON DELETE CASCADE,
  alternate_identifier text NOT NULL,
  alternate_identifier_type text NOT NULL
);
CREATE INDEX IF NOT EXISTS idx_datasheet_alt_ids_datasheet_id ON datasheet_alternate_identifiers (datasheet_id);

CREATE TABLE IF NOT EXISTS datasheet_related_identifiers (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  datasheet_id bigint NOT NULL REFERENCES datasheets(identifier) ON DELETE CASCADE,
  related_identifier text NOT NULL,
  related_identifier_type text NOT NULL,
  relation_type text NOT NULL,
  related_metadata_scheme text,
  scheme_uri text,
  scheme_type text,
  resource_type_general text
);
CREATE INDEX IF NOT EXISTS idx_datasheet_related_ids_datasheet_id ON datasheet_related_identifiers (datasheet_id);

CREATE TABLE IF NOT EXISTS datasheet_rights (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  datasheet_id bigint NOT NULL REFERENCES datasheets(identifier) ON DELETE CASCADE,
  rights text,
  rights_uri text,
  rights_identifier text,
  rights_identifier_scheme text,
  scheme_uri text,
  lang text
);
CREATE INDEX IF NOT EXISTS idx_datasheet_rights_datasheet_id ON datasheet_rights (datasheet_id);

CREATE TABLE IF NOT EXISTS datasheet_descriptions (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  datasheet_id bigint NOT NULL REFERENCES datasheets(identifier) ON DELETE CASCADE,
  description text NOT NULL,
  description_type text NOT NULL,
  lang text
);
CREATE INDEX IF NOT EXISTS idx_datasheet_descriptions_datasheet_id ON datasheet_descriptions (datasheet_id);

CREATE TABLE IF NOT EXISTS datasheet_geo_locations (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  datasheet_id bigint NOT NULL REFERENCES datasheets(identifier) ON DELETE CASCADE,
  geo_location_place text,
  point_longitude numeric,
  point_latitude numeric,
  box_west numeric,
  box_east numeric,
  box_south numeric,
  box_north numeric,
  polygon jsonb
);
CREATE INDEX IF NOT EXISTS idx_datasheet_geo_locations_datasheet_id ON datasheet_geo_locations (datasheet_id);

CREATE TABLE IF NOT EXISTS datasheet_funding_references (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  datasheet_id bigint NOT NULL REFERENCES datasheets(identifier) ON DELETE CASCADE,
  funder_name text NOT NULL,
  funder_identifier text,
  funder_identifier_type text,
  scheme_uri text,
  award_number text,
  award_uri text,
  award_title text
);
CREATE INDEX IF NOT EXISTS idx_datasheet_funding_refs_datasheet_id ON datasheet_funding_references (datasheet_id);

CREATE TABLE IF NOT EXISTS models (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  name text NOT NULL,
  version text,
  description text,
  owner text,
  location text,
  license text,
  framework text,
  model_type text,
  test_accuracy numeric(6,5),
  model_metrics jsonb,
  inference_labels jsonb,
  model_structure jsonb,
  created_at timestamptz NOT NULL,
  updated_at timestamptz NOT NULL,
  model_card_id bigint NOT NULL UNIQUE REFERENCES model_cards(id)
);
CREATE INDEX IF NOT EXISTS idx_models_model_card_id ON models (model_card_id);

CREATE TABLE IF NOT EXISTS experiments (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  start_at timestamptz NOT NULL,
  executed_at timestamptz,
  total_images integer,
  total_predictions integer,
  total_ground_truth_objects integer,
  true_positives integer,
  false_positives integer,
  false_negatives integer,
  precision numeric(6,5),
  recall numeric(6,5),
  f1_score numeric(6,5),
  mean_iou numeric(6,5),
  map_50 numeric(6,5),
  map_50_95 numeric(6,5),
  user_id text NOT NULL REFERENCES users(username),
  edge_device_id text NOT NULL REFERENCES edge_devices(device_id),
  model_id bigint NOT NULL REFERENCES models(id)
);
CREATE INDEX IF NOT EXISTS idx_experiments_user_id ON experiments (user_id);
CREATE INDEX IF NOT EXISTS idx_experiments_edge_device_id ON experiments (edge_device_id);
CREATE INDEX IF NOT EXISTS idx_experiments_model_id ON experiments (model_id);
CREATE INDEX IF NOT EXISTS idx_experiments_start_at ON experiments (start_at);

CREATE TABLE IF NOT EXISTS raw_images (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  image_name text NOT NULL,
  ground_truth jsonb
);

CREATE TABLE IF NOT EXISTS experiment_images (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  experiment_id bigint NOT NULL REFERENCES experiments(id),
  raw_image_id bigint NOT NULL REFERENCES raw_images(id),
  image_count integer,
  image_received_at timestamptz,
  image_scored_at timestamptz,
  image_store_deleted_at timestamptz,
  image_decision text,
  top_label text,
  top_probability numeric(8,7),
  ingested_at timestamptz NOT NULL,
  scores jsonb,
  UNIQUE (experiment_id, raw_image_id)
);
CREATE INDEX IF NOT EXISTS idx_experiment_images_experiment_id ON experiment_images (experiment_id);
CREATE INDEX IF NOT EXISTS idx_experiment_images_raw_image_id ON experiment_images (raw_image_id);
CREATE INDEX IF NOT EXISTS idx_experiment_images_received_at ON experiment_images (image_received_at);
CREATE INDEX IF NOT EXISTS idx_experiment_images_ingested_at ON experiment_images (ingested_at);

CREATE TABLE IF NOT EXISTS events (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  domain text NOT NULL DEFAULT 'animal-ecology',
  uuid text NOT NULL UNIQUE,
  image_count integer,
  image_name text,
  ground_truth text,
  image_receiving_timestamp timestamptz,
  image_scoring_timestamp timestamptz,
  image_store_delete_time timestamptz,
  image_decision text,
  model_id text,
  label text,
  probability numeric(8,7),
  flattened_scores text,
  device_id text,
  experiment_id text NOT NULL,
  user_id text NOT NULL,
  total_images integer,
  total_predictions integer,
  total_ground_truth_objects integer,
  true_positives integer,
  false_positives integer,
  false_negatives integer,
  precision numeric(6,5),
  recall numeric(6,5),
  f1_score numeric(6,5),
  mean_iou numeric(6,5),
  map_50 numeric(6,5),
  map_50_95 numeric(6,5),
  ingested_at timestamptz NOT NULL DEFAULT NOW()
);
CREATE INDEX IF NOT EXISTS idx_cte_experiment_id ON events (experiment_id);
CREATE INDEX IF NOT EXISTS idx_cte_user_id ON events (user_id);

CREATE TABLE IF NOT EXISTS power_summary (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  domain text NOT NULL DEFAULT 'animal-ecology',
  experiment_id text NOT NULL UNIQUE,
  image_generating_plugin_cpu_power_consumption numeric(10,4),
  image_generating_plugin_gpu_power_consumption numeric(10,4),
  power_monitor_plugin_cpu_power_consumption numeric(10,4),
  power_monitor_plugin_gpu_power_consumption numeric(10,4),
  image_scoring_plugin_cpu_power_consumption numeric(10,4),
  image_scoring_plugin_gpu_power_consumption numeric(10,4),
  total_cpu_power_consumption numeric(10,4),
  total_gpu_power_consumption numeric(10,4),
  ingested_at timestamptz NOT NULL DEFAULT NOW()
);

-- ============================================================================
-- CKN → Patra normalized-table fan-out
-- ----------------------------------------------------------------------------
-- Kafka Connect's JDBC sinks land oracle-events into events and
-- cameratraps-power-summary into power_summary. These triggers fan each
-- row into the normalized schema (experiments / experiment_images /
-- raw_images) by LOOKING UP pre-registered users / edge_devices / models.
-- If the lookup misses, the trigger RAISES EXCEPTION so kafka-connect logs
-- the failure (errors.tolerance=all skips the record) and ops can register
-- the missing entity and replay from kafka.
-- ============================================================================

-- Correlation columns (text identifiers from CKN, set at registration time)
ALTER TABLE model_cards DROP COLUMN IF EXISTS status;
ALTER TABLE models DROP COLUMN IF EXISTS model_uid;
ALTER TABLE experiments ADD COLUMN IF NOT EXISTS experiment_uid text;
ALTER TABLE experiments ADD COLUMN IF NOT EXISTS total_cpu_power_w numeric(10,4);
ALTER TABLE experiments ADD COLUMN IF NOT EXISTS total_gpu_power_w numeric(10,4);
ALTER TABLE raw_images ADD COLUMN IF NOT EXISTS image_uid text;

-- Named UNIQUE constraints. Natural keys (users.username, edge_devices.device_id,
-- models.id) and stable text uids (experiments.experiment_uid,
-- raw_images.image_uid) double as CKN ingest lookup keys.
DO $ckn$
BEGIN
  IF NOT EXISTS (SELECT 1 FROM pg_constraint WHERE conname = 'experiments_experiment_uid_key') THEN
    ALTER TABLE experiments ADD CONSTRAINT experiments_experiment_uid_key UNIQUE (experiment_uid);
  END IF;
  IF NOT EXISTS (SELECT 1 FROM pg_constraint WHERE conname = 'raw_images_image_uid_key') THEN
    ALTER TABLE raw_images ADD CONSTRAINT raw_images_image_uid_key UNIQUE (image_uid);
  END IF;
END
$ckn$;

-- ---------------------------------------------------------------------------
-- Trigger: fan events rows into the normalized schema.
-- Idempotent on re-delivery: JDBC sink upserts on uuid; this trigger runs on
-- INSERT and UPDATE, and every insert it emits is ON CONFLICT DO UPDATE/NOTHING.
-- Pre-registered users/edge_devices/models required: ingestion fails loudly
-- (RAISE EXCEPTION) if a referenced entity isn't already in the catalog.
-- ---------------------------------------------------------------------------

CREATE OR REPLACE FUNCTION fn_ingest_camera_trap_event() RETURNS trigger AS $fn$
DECLARE
  v_model_id bigint;
  v_experiment_id bigint;
  v_raw_image_id bigint;
  v_scores jsonb;
BEGIN
  -- 1. Verify user is pre-registered (users.username is the Tapis username).
  IF NOT EXISTS (SELECT 1 FROM users WHERE username = NEW.user_id) THEN
    RAISE EXCEPTION 'CKN ingest: user "%" not registered in patra (users.username)', NEW.user_id;
  END IF;

  -- 2. Verify edge_device is pre-registered (edge_devices.device_id).
  IF NOT EXISTS (SELECT 1 FROM edge_devices WHERE device_id = NEW.device_id) THEN
    RAISE EXCEPTION 'CKN ingest: edge_device "%" not registered in patra (edge_devices.device_id)', NEW.device_id;
  END IF;

  -- 3. Resolve model id (CKN sends the patra-assigned bigint as text in NEW.model_id).
  SELECT id INTO v_model_id FROM models WHERE id::text = NEW.model_id;
  IF v_model_id IS NULL THEN
    RAISE EXCEPTION 'CKN ingest: model "%" not registered in patra (models.id)', NEW.model_id;
  END IF;

  -- 4. Upsert experiment keyed on experiment_uid; on subsequent events,
  --    update running aggregates and extend executed_at forward.
  INSERT INTO experiments (
    experiment_uid, start_at, executed_at,
    total_images, total_predictions, total_ground_truth_objects,
    true_positives, false_positives, false_negatives,
    precision, recall, f1_score, mean_iou, map_50, map_50_95,
    user_id, edge_device_id, model_id
  )
  VALUES (
    NEW.experiment_id,
    COALESCE(NEW.image_receiving_timestamp, NOW()),
    NEW.image_scoring_timestamp,
    NEW.total_images, NEW.total_predictions, NEW.total_ground_truth_objects,
    NEW.true_positives, NEW.false_positives, NEW.false_negatives,
    NEW.precision, NEW.recall, NEW.f1_score, NEW.mean_iou, NEW.map_50, NEW.map_50_95,
    NEW.user_id, NEW.device_id, v_model_id
  )
  ON CONFLICT ON CONSTRAINT experiments_experiment_uid_key DO UPDATE SET
    executed_at = GREATEST(experiments.executed_at, EXCLUDED.executed_at),
    total_images = EXCLUDED.total_images,
    total_predictions = EXCLUDED.total_predictions,
    total_ground_truth_objects = EXCLUDED.total_ground_truth_objects,
    true_positives = EXCLUDED.true_positives,
    false_positives = EXCLUDED.false_positives,
    false_negatives = EXCLUDED.false_negatives,
    precision = EXCLUDED.precision,
    recall = EXCLUDED.recall,
    f1_score = EXCLUDED.f1_score,
    mean_iou = EXCLUDED.mean_iou,
    map_50 = EXCLUDED.map_50,
    map_50_95 = EXCLUDED.map_50_95
  RETURNING id INTO v_experiment_id;

  -- 5. Resolve or create raw_image keyed on the CKN event UUID
  INSERT INTO raw_images (image_uid, image_name, ground_truth)
  VALUES (
    NEW.uuid,
    COALESCE(NEW.image_name, NEW.uuid),
    CASE WHEN NEW.ground_truth IS NOT NULL
         THEN jsonb_build_object('label', NEW.ground_truth)
         ELSE NULL END
  )
  ON CONFLICT ON CONSTRAINT raw_images_image_uid_key DO UPDATE SET image_name = EXCLUDED.image_name
  RETURNING id INTO v_raw_image_id;

  -- 6. Parse flattened_scores if it's valid JSON; otherwise wrap the raw string.
  v_scores := NULL;
  IF NEW.flattened_scores IS NOT NULL THEN
    BEGIN
      v_scores := NEW.flattened_scores::jsonb;
    EXCEPTION WHEN OTHERS THEN
      v_scores := jsonb_build_object('raw', NEW.flattened_scores);
    END;
  END IF;

  -- 7. Upsert the experiment_images row for this (experiment, image) pair.
  INSERT INTO experiment_images (
    experiment_id, raw_image_id, image_count,
    image_received_at, image_scored_at, image_store_deleted_at,
    image_decision, top_label, top_probability,
    ingested_at, scores
  )
  VALUES (
    v_experiment_id, v_raw_image_id, COALESCE(NEW.image_count, 1),
    NEW.image_receiving_timestamp, NEW.image_scoring_timestamp, NEW.image_store_delete_time,
    NEW.image_decision, NEW.label, NEW.probability,
    COALESCE(NEW.ingested_at, NOW()), v_scores
  )
  ON CONFLICT (experiment_id, raw_image_id) DO UPDATE SET
    image_scored_at = EXCLUDED.image_scored_at,
    image_store_deleted_at = EXCLUDED.image_store_deleted_at,
    image_decision = EXCLUDED.image_decision,
    top_label = EXCLUDED.top_label,
    top_probability = EXCLUDED.top_probability,
    scores = EXCLUDED.scores;

  RETURN NEW;
END;
$fn$ LANGUAGE plpgsql;

-- ---------------------------------------------------------------------------
-- Trigger: apply cameratraps-power-summary rows onto the matching experiment.
-- Power summaries arrive at experiment shutdown; if the event trigger hasn't
-- seen the experiment yet (rare; possible if ordering is weird), skip with a
-- NOTICE. Kafka offset management will retry.
-- ---------------------------------------------------------------------------

CREATE OR REPLACE FUNCTION fn_ingest_camera_trap_power() RETURNS trigger AS $fn$
DECLARE
  v_experiment_id bigint;
BEGIN
  SELECT id INTO v_experiment_id
    FROM experiments
   WHERE experiment_uid = NEW.experiment_id;

  IF v_experiment_id IS NULL THEN
    RAISE NOTICE 'fn_ingest_camera_trap_power: experiment % not yet in normalized table; power deferred', NEW.experiment_id;
    RETURN NEW;
  END IF;

  UPDATE experiments
     SET total_cpu_power_w = NEW.total_cpu_power_consumption,
         total_gpu_power_w = NEW.total_gpu_power_consumption
   WHERE id = v_experiment_id;

  RETURN NEW;
END;
$fn$ LANGUAGE plpgsql;

-- ---------------------------------------------------------------------------
-- Triggers (idempotent: drop + create)
-- ---------------------------------------------------------------------------

DROP TRIGGER IF EXISTS trg_camera_trap_events_fanout ON events;
CREATE TRIGGER trg_camera_trap_events_fanout
  AFTER INSERT OR UPDATE ON events
  FOR EACH ROW EXECUTE FUNCTION fn_ingest_camera_trap_event();

DROP TRIGGER IF EXISTS trg_camera_trap_power_fanout ON power_summary;
CREATE TRIGGER trg_camera_trap_power_fanout
  AFTER INSERT OR UPDATE ON power_summary
  FOR EACH ROW EXECUTE FUNCTION fn_ingest_camera_trap_power();

-- ===========================================================================
-- UUID external identifiers (PID).
-- See poc/UUID_COLUMN_PLAN.md for design rationale.
-- ---------------------------------------------------------------------------
-- model_cards.uuid and datasheets.uuid are the externally-visible PIDs.
-- The bigint PKs (model_cards.id, datasheets.identifier) remain the canonical
-- internal identifiers and FK targets across all child tables; UUID is purely
-- additive. Generated with UUIDv4 (gen_random_uuid from pgcrypto). Idempotent.
-- ===========================================================================

CREATE EXTENSION IF NOT EXISTS pgcrypto;

ALTER TABLE model_cards
  ADD COLUMN IF NOT EXISTS uuid uuid NOT NULL DEFAULT gen_random_uuid();

DO $$
BEGIN
  IF NOT EXISTS (SELECT 1 FROM pg_constraint WHERE conname = 'model_cards_uuid_key') THEN
    ALTER TABLE model_cards ADD CONSTRAINT model_cards_uuid_key UNIQUE (uuid);
  END IF;
END $$;

ALTER TABLE datasheets
  ADD COLUMN IF NOT EXISTS uuid uuid NOT NULL DEFAULT gen_random_uuid();

DO $$
BEGIN
  IF NOT EXISTS (SELECT 1 FROM pg_constraint WHERE conname = 'datasheets_uuid_key') THEN
    ALTER TABLE datasheets ADD CONSTRAINT datasheets_uuid_key UNIQUE (uuid);
  END IF;
END $$;
